add a flag to know if the game is finished

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -12,6 +12,7 @@ use.weapon.from.bag=Use a weapon from your bag
 no.weapons.in.bag=No other weapons in your bag. 
 no.hero.created=New hero created: 
 selected.hero=You have selected: 
+bye.message=Good bye
 
 player.died=Unfortunately you have died. Game over.
 player.attacked=**** you have been attacked!
@@ -53,8 +54,10 @@ menu.bow=Bow
 menu.poison=Poison
 menu.create.hero=Create a hero
 menu.play.game=Play new game
+menu.exit=Exit
 
 title.create.character=############## CREATE CHARACTER ##########################
 title.main.menu=############## MAIN MENU ##########################
 title.room=############## ROOM ##########################
 title.select.character=############## SELECT YOUR CHARACTER ##########################
+title.exit.found=############## CONGRATULATIONS! YOU HAVE FOUND THE EXIT ##########################
