do some code refactoring. Add reade.md

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -69,3 +69,5 @@ title.select.character=############## SELECT YOUR CHARACTER ####################
 title.exit.found=############## CONGRATULATIONS! YOU HAVE FOUND THE EXIT ##########################
 title.save.game=############## SAVE CURENT GAME ##########################
 title.resume.game=############## RESUME GAME #########################
+title.game=MAZE GAME 
+title.game.description=A simple maze game with a collection of paths  where you (a.k.a the hero) must find the exit room. During your journey you will find enemies (goblins, zombies, etc) that will attack you.
